# random_recipe_bot_v2

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8b7442dee71e_initial_migration.py
bot/: handlers.py
db/: models.py  setup.py
resources/: config_example.ini  enums.py
